# vybin

./: .gitignore  DESIGN.md  README.md  ROADMAP.md
.github/workflows/: studio-release.yml
landing/: index.html
landing/es/: index.html
studio/: .gitignore  CHECKLIST.md  STATUS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
studio/src/: App.tsx  ApprovalModal.test.tsx  ApprovalModal.tsx  ClarifyModal.test.tsx  ClarifyModal.tsx  ClickParticles.tsx  ErrorBoundary.tsx  Markdown.tsx  Mascot.tsx  Modal.tsx  TabBar.test.tsx  TabBar.tsx  Toasts.tsx  VoiceModeToggle.test.tsx  VoiceModeToggle.tsx  components.tsx  ipc-types.ts  main.tsx  styles.css
studio/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
studio/src-tauri/capabilities/: default.json
studio/src-tauri/icons/: icon.icns
studio/src-tauri/src/: lib.rs  main.rs  sidecar.rs
studio/src/__tests__/: modal-flow.test.tsx  setup-flow.test.tsx
studio/src/hooks/: ToastContext.tsx  useCero.ts  useCeroData.ts  useCronData.ts  useGatewayConfig.ts  useMascot.ts  useSettings.ts  useStatsData.ts  useTabs.ts  useToasts.ts
studio/src/lib/: mascot-sounds.ts  notify.ts  providers.ts
studio/src/views/: AdminView.test.tsx  AdminView.tsx  DataView.test.tsx  DataView.tsx  GatewayView.test.tsx  GatewayView.tsx  LessonsView.tsx  MCPView.test.tsx  MCPView.tsx  SchedulerView.test.tsx  SchedulerView.tsx  Settings.tsx  SetupView.test.tsx  SetupView.tsx  SkillsView.tsx  StatsView.test.tsx  StatsView.tsx  UserModelView.test.tsx  UserModelView.tsx  session-summary-toast.test.tsx
(+3 files in other folders)
