[package]
name = "cero-studio"
version = "0.2.0-alpha.0"
description = "Vybin — free desktop AI agent for vibe coding"
authors = ["Vybin contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "cero_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
once_cell = "1"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-notification = "2"
tauri-plugin-http = "2.0.0-rc.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
